--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,7 +2,7 @@ name: Run Discord Bot
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # каждые 6 часов, пример
+    - cron: '0 */6 * * *'  # Каждые 6 часов, пример
 
 jobs:
   run-bot:
