--- a/.github/workflows/runbot.yml
+++ b/.github/workflows/runbot.yml
@@ -6,41 +6,48 @@ on:
       - main
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *'  # Каждые 6 часов
+    - cron: '0 */6 * * *'  # Запуск каждые 6 часов
 
 jobs:
   disable-other-workflows:
     name: Disable old workflows
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Disable other workflows (except this one)
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # personal access token with workflow access
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          REPO: ${{ github.repository }}
+          CURRENT_WORKFLOW: ${{ github.workflow }}
         run: |
-          REPO="${{ github.repository }}"
-          CURRENT_WORKFLOW="${{ github.workflow }}"
-          
-          echo "Fetching workflows..."
-          workflows=$(curl -s -H "Authorization: token $GH_TOKEN" https://api.github.com/repos/$REPO/actions/workflows | jq '.workflows[] | select(.state=="active")')
+          echo "Fetching workflows for $REPO..."
 
-          for row in $(echo "${workflows}" | jq -r '.name + "::" + .id'); do
-            NAME=$(echo "$row" | cut -d "::" -f 1)
-            ID=$(echo "$row" | cut -d "::" -f 2)
-            
-            if [ "$NAME" != "$CURRENT_WORKFLOW" ]; then
-              echo "Disabling workflow: $NAME (ID: $ID)"
+          workflows=$(curl -s -H "Authorization: token $GH_TOKEN" \
+            https://api.github.com/repos/$REPO/actions/workflows)
+
+          echo "$workflows" | jq '.workflows[] | select(.state=="active")' > workflows.json
+
+          while IFS= read -r row; do
+            name=$(echo "$row" | jq -r '.name')
+            id=$(echo "$row" | jq -r '.id')
+
+            if [ "$name" != "$CURRENT_WORKFLOW" ]; then
+              echo "Disabling: $name (ID: $id)"
               curl -s -X PUT \
                 -H "Authorization: token $GH_TOKEN" \
                 -H "Accept: application/vnd.github.v3+json" \
-                https://api.github.com/repos/$REPO/actions/workflows/$ID/disable
+                https://api.github.com/repos/$REPO/actions/workflows/$id/disable
             fi
-          done
+          done < <(jq -c '.' workflows.json)
 
   run-bot:
-    name: Start Bot
-    needs: disable-other-workflows
+    name: Start Discord Bot
     runs-on: ubuntu-latest
+    needs: disable-other-workflows
 
     steps:
       - uses: actions/checkout@v3
@@ -49,11 +56,11 @@ jobs:
         with:
           python-version: 3.11
 
-      - run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
       - name: Run bot
         env:
           DISCORD_TOKEN: ${{ secrets.TOKEN }}
           OWNER_ID: ${{ secrets.OWNER_ID }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: python bot.py
