--- a/.github/workflows/runbot.yml
+++ b/.github/workflows/runbot.yml
@@ -6,7 +6,7 @@ on:
       - main
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *'  # Запуск каждые 6 часов
+    - cron: '0 */6 * * *'  # Запуск каждые 6 часов.
 
 jobs:
   disable-other-workflows:
